--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ejs": "^3.1.6",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
   }
 }
