--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0"
   }
 }
